Mozilla Location Service shutting down June 12
https://location.services.mozilla.com/ was updated 2 days ago to link to an announcement that Mozilla Location Service would no longer be responding to third party POST requests March 27 June 12. The geolocate request is a POST request.
Unless an alternative can be identified, I recommend that the Location page be hidden from GNOME 46. Perhaps as a meson option in case it is later decided to revert that change. I am unaware of any suitable alternative.
I believe that GNOME uses Mozilla Location Services via geoclue.
Edited by Jeremy Bicha