privacy, location: Remove the Location Service panel

Mozilla Location Service is retiring in June 12, 2024.
https://github.com/mozilla/ichnaea/issues/2065

We don't have a drop-in replacement for the upcoming GNOME 46.

This commit removes the Location services frontend. In the following
commits I will remove other location dependent features in Settings.

See https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/2959