panels/privacy/cc-privacy-panel.c
@@ -29,7 +29,6 @@
 #include "cc-diagnostics-page.h"
 #include "cc-firmware-security-page.h"
 #include "cc-list-row.h"
-#include "cc-location-page.h"
 #include "cc-microphone-page.h"
 #include "cc-privacy-resources.h"
 #include "cc-screen-page.h"
@@ -53,8 +52,6 @@ cc_privacy_panel_get_help_uri (CcPanel *panel)
 
   if (g_strcmp0 (page_tag, "camera-page") == 0)
     return "help:gnome-help/camera";
-  else if (g_strcmp0 (page_tag, "location-page") == 0)
-    return "help:gnome-help/location";
   else if (g_strcmp0 (page_tag, "microphone-page") == 0)
     return "help:gnome-help/microphone";
   else
@@ -77,7 +74,6 @@ cc_privacy_panel_class_init (CcPrivacyPanelClass *klass)
   g_type_ensure (CC_TYPE_CAMERA_PAGE);
   g_type_ensure (CC_TYPE_DIAGNOSTICS_PAGE);
   g_type_ensure (CC_TYPE_FIRMWARE_SECURITY_PAGE);
-  g_type_ensure (CC_TYPE_LOCATION_PAGE);
   g_type_ensure (CC_TYPE_MICROPHONE_PAGE);
   g_type_ensure (CC_TYPE_SCREEN_PAGE);
   g_type_ensure (CC_TYPE_USAGE_PAGE);
